--- a/bikeBros/package.json
+++ b/bikeBros/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/social-sharing": "^6.3.0",
     "@capacitor/android": "^4.7.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "^4.7.0",
@@ -27,6 +28,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.7.3",
     "@ngneat/error-tailor": "^4.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "dotenv": "^16.0.3",
     "ionicons": "^6.0.3",
     "jsonwebtoken": "^9.0.0",
